# linuxusbcreator

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: io.github.zsk1dr0w.LinuxUsbCreator.desktop.in  io.github.zsk1dr0w.LinuxUsbCreator.metainfo.xml.in  io.github.zsk1dr0w.LinuxUsbCreator.policy.in  linux-compatibility.json  linuxusbcreator.1  meson.build
data/icons/: README.md
docs/: ARCHITECTURE.md  COMPATIBILIDAD_LINUX.md  FIRMAS_DE_RELEASE.md  MATRIZ_PRUEBAS_HARDWARE.md  MATRIZ_PRUEBAS_WINDOWS.md  THREAT_MODEL.md  linuxusbcreator-release-key.asc
docs/decisions/: 0001-language-ui-build.md  0002-packaging.md  0003-privileged-helper.md  0004-windows-media-pipeline.md  0005-visible-uefi-windows-volume.md  0006-linux-iso-persistence.md
packaging/: README.md
packaging/debian/: changelog  control  copyright  linuxusbcreator.install
packaging/rpm/: linuxusbcreator.spec
po/: POTFILES  es.po  linuxusbcreator.pot  meson.build
scripts/: create-source-tarball.sh
src/: meson.build
src/app/: main.c  window.c  window.h  write-operation.c  write-operation.h
src/core/: device.c  device.h  helper-protocol.c  helper-protocol.h  image-classifier.c  image-classifier.h  image-writer.c  image-writer.h  linux-media.c  linux-media.h  linux-target-plan.c  linux-target-plan.h  operation-log.c  operation-log.h  windows-bios-boot.c  windows-bios-boot.h  windows-image.c  windows-image.h  windows-media.c  windows-media.h  windows-target-plan.c  windows-target-plan.h
src/helper/: main.c
src/linux/: device-monitor.c  device-monitor.h  filesystem-mount.c  filesystem-mount.h  iso-mount.c  iso-mount.h
tests/: meson.build
tests/fixtures/: debian-13-dvd.listing  fedora-workstation-live-44.listing
tests/integration/: test-cli-help.sh
tests/unit/: test-device.c  test-helper-protocol.c  test-image-classifier.c  test-image-writer.c  test-linux-media.c  test-linux-target-plan.c  test-operation-log.c  test-windows-bios-boot.c  test-windows-image.c  test-windows-media.c  test-windows-target-plan.c  test-write-operation.c
